tests/errors/cannot_assign_to_const.b
// Expected error: cannot assign to const variable 'X'

fn main() {
    const int X = 42;
    X = 100;
}
